--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -71,13 +71,18 @@ body{
   background-color: rgba(255, 255, 255, 0.3);
 }
 
-.FooterHolder hover-underline-animation {
+.FooterHolder {
+
+}
+
+
+.hover-underline-animation-white {
   display: inline-block;
   position: relative;
   color: white;
 }
 
-.FooterHolder hover-underline-animation:after{
+.hover-underline-animation-white:after {
   content: '';
   position: absolute;
   width: 100%;
@@ -90,7 +95,7 @@ body{
   transition: transform 0.25s ease-out;
 }
 
-.FooterHolder hover-underline-animation:hover:after{
+.hover-underline-animation-white:hover:after {
   transform: scaleX(1);
   transform-origin: center ;
 }
