--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -842,6 +842,10 @@ outline: #646363 solid 2px;
   background-image: url("../img//fundo-cadastro.svg");
 }
 
+#formularioUsuarioEmpresa a.setaVoltar{
+  padding-top: 40px;
+}
+
 .subTituloFormHolderUsuarioEmpresa {
   font-family: "Raleway Bold", sans-serif;
   color: #3837a1;
