--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -1040,6 +1040,7 @@ outline: #646363 solid 2px;
   height: 100vh;
   width: 35%;
   background: #bad5db;
+overflow: hidden;
 
   display: flex;
   flex-direction: column;
