--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -1082,7 +1082,7 @@ overflow: hidden;
   border-radius: 20px;
   height: 50px;
   width: 400px;
-  font-family: "Raleway Bold", sans-serif;
+  font-family: "Public Sans Bold", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
