--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -46,7 +46,9 @@
   src: url("../fonts/PublicSans-Bold.ttf");
 }
 
-
+::-ms-reveal {
+  display: none;
+}
 
 /* GERAL */
 .container-content {
@@ -244,7 +246,7 @@ body {
   border-radius: 20px;
   height: 50px;
   width: 100%;
-  padding-inline: 20px;
+  padding-left: 20px;
   font-family: "Public Sans Bold", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -255,6 +257,36 @@ body {
 outline: #646363 solid 2px;
 }
 
+.formulario div.formInput{
+  padding-inline: 0px;
+
+}
+
+.formulario button.formSubmit{
+  margin-top: 45px;
+}
+
+.formInput input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 20px;
+  padding-left: 20px;
+  position: relative;
+}
+
+.formInput input::placeholder {
+  font-family: "Raleway Bold", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #c1c1c1;
+}
+
+.formInput input:focus{
+  outline: #646363 solid 2px;
+}
 
 .formInput::placeholder {
   font-family: "Raleway Bold", sans-serif;
@@ -263,6 +295,26 @@ outline: #646363 solid 2px;
   font-size: 16px;
   line-height: 19px;
   color: #c1c1c1;
+}
+
+#revealPassword{
+  background: url(https://cdn-icons-png.flaticon.com/512/3945/3945105.png);
+  background-size: cover;
+
+  width: 25px;
+  height: 25px;
+  transform: translateY(-50%);
+
+  position: absolute;
+  top: 50%;
+  right: 20px;
+
+  cursor: pointer;
+}
+
+#revealPassword.hide{
+  background: url(https://cdn-icons-png.flaticon.com/512/2533/2533656.png);
+  background-size: cover;
 }
 
 .formSubmit {
